--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ permissions:
   contents: write # Grants permissions to write to the repo
 
 env:
-  GIT_USER_EMAIL: muoican6789@gmail.com
-  GIT_USER_NAME: hungleacb
+  GIT_USER_EMAIL: miesharoderick@gmail.com
+  GIT_USER_NAME: tuhailongdang
 
 jobs:
   ethereum_auto_commit:
